test/fixtures/real-cli-output/cargo-style.txt
warning: unused import: `std::collections::HashMap`
  --> src/main.rs:3:5
   |
 3 | use std::collections::HashMap;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> src/lib.rs:42:13
   |
42 |     let x: u32 = "hello";
   |             ^^^   ^^^^^^^ expected `u32`, found `&str`
